--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/killshotxd/NodeJs-Full-Course#readme",
   "dependencies": {
+    "chalk": "^5.0.1",
     "colors": "^1.4.0",
     "simple-node-logger": "^21.8.12"
   }
