--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "chalk": "^5.0.1",
     "colors": "^1.4.0",
+    "nodemon": "^2.0.20",
     "simple-node-logger": "^21.8.12"
   }
 }
